deploy/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: humorvibes
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: humorvibes
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
